# sr-brain-control

./: LICENSE  README.md  requirements.txt  socketmatrix.py  tcp_reader.py
data/experimental_results/rosbag2_20231030_181558/: metadata.yaml  (+1 more)
hsa_brain_control/: package.xml  setup.cfg  setup.py
hsa_brain_control/config/: keystroke2joy_bending.yaml  keystroke2joy_cartesian.yaml
hsa_brain_control/hsa_brain_control/: planar_hsa_bending_brain_control_node.py  planar_hsa_brain_control_node.py  planar_hsa_cartesian_brain_control_node.py
hsa_brain_control/launch/: planar_hsa_sim_brain_control_launch.py
hsa_trajectory_planner/: package.xml  setup.cfg  setup.py
hsa_trajectory_planner/hsa_trajectory_planner/: planar_bending_trajectory_node.py
joylike_operation/: package.xml  setup.cfg  setup.py
joylike_operation/joylike_operation/: keyboard_to_joy_node.py  openvibe_stimulation_to_joy_node.py
launch/: planar_hsa_cartesian_brain_control_launch.py  planar_hsa_robot_bending_brain_control_launch.py  planar_hsa_robot_brain_control_launch.py  planar_hsa_sim_bending_brain_control_launch.py  planar_hsa_sim_brain_control_launch.py  planar_hsa_sim_cartesian_brain_control_launch.py
openvibe/: jawvseeg.xml  realtime.xml
openvibe_bridge/: package.xml  setup.cfg  setup.py
openvibe_bridge/openvibe_bridge/: stimulation_receiver_node.py
scripts/: RestvsRight.xml
scripts/experiment_analysis/: animate_experiment.py  plot_experiment.py  plot_setpoint_regulation.py
scripts/tcp/: socketmatrix.py
sr_teleop/: package.xml  setup.cfg  setup.py
tcp_reader/: CMakeLists.txt  package.xml  setup.cfg  setup.py
tcp_reader/src/: socket_reader_node.cpp
tcp_reader/tcp_reader/: socket_reader_node.py
(+33 files in other folders)
