<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hsa_trajectory_planner</name>
  <version>0.0.0</version>
  <description>Plan setpoint trajectories for the HSA end-effector.</description>
  <maintainer email="maximilian@stoelzle.ch">Maximilian Stolzle</maintainer>
  <license>MIT</license>

  <depend>hsa_control_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
