<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joylike_operation</name>
  <version>0.0.0</version>
  <description>TeleOperation for robots: Receive data from OpenViBE sent over a TCP socket and publish it as Joy ROS2 messages or read keyboard inputs.</description>
  <maintainer email="maximilian@stoelzle.ch">Maximilian Stölzle</maintainer>
  <license>MIT</license>

  <depend>keyboard</depend>
  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
